--- a/app/static/css/ppp.css
+++ b/app/static/css/ppp.css
@@ -18,9 +18,11 @@ b{
     top: 60px;
     background: white;
     margin-top: 0px !important;
-    z-index: 9999;
+    z-index: 10;
 }
-
+.nav-menu{
+    z-index: 50;
+}
 body{ 
 	padding-top: 75px;
 	font-size: 1rem;
