--- a/app/templates/bcpro.html
+++ b/app/templates/bcpro.html
@@ -11,53 +11,54 @@
 {% block content %}
     <div>
     <div class="container-fluid">
-      <img style="text-align: center;" src="../static/img/LOGO-BC-Financeiro.png">
+      <img style="align-content: center" src="../static/img/LOGO-BC-Financeiro.png">
       
       <p>O Broadcast Profissional é uma plataforma de informações em tempo real que reúne dados, cotações, notícias e análises sobre os principais mercados nacionais e internacionais. A combinação das redações da Agência Estado e do Estadão, juntamente com uma série de parceiros como consultorias especializadas e analistas de mercado trazem informações sobre acontecimentos no Brasil e no mundo em tempo real com exclusividade para os seus leitores, permitindo um acompanhamento qualificado dos eventos que impactam a volatilidade dos principais setores da economia com uma linguagem objetiva e concisa</p>
-      <p>Ao se tornar usuário do Broadcast+, independentemente do pacote adquirido, as seguintes cotações e funcionalidades estão inclusas:</p>
+      <p>Ao se tornar usuário do Broadcast+, os seguintes conteúdos e funcionalidades são adquiridas:</p>
 
       <!--Cotações-->
       <div class="container-fluid">
         <div class="row">
-        <div class=col-6>
-        <p><h4 class="text-primary">Cotações</h4></p>
-        <ul>
-          <p><b><ins>Ações</ins> - </b><font size="2">BOVESPA, NYSE, NYSE Amex, Nasdaq, Bolsa de Madri e Índices Mundiais<font color="red">¹</font>.</font></p>
-          <p><b><ins>Derivativos</ins> - </b><font size="2">BM&F, CME, CBOT, NYMEX, COMEX, ICE US e  ICE Europe.</font></p>
-          <p><b><ins>Câmbio</ins> - </b><font size="2">Taxas Broadcast, Principais Moedas Spot (USD), PTAX e mais de 20 Contribuidores<font color="red">²</font>.</font></p>
-          <p><b><ins>Commodities</ins> - </b><font size="2">Indicadores CEPEA.</font></p>
-          <p><b><ins>Renda Fixa</ins> - </b><font size="2">Taxas de Títulos Públicos Broadcast, Anbima e mais de 10 Contribuidores<font color="red">³</font>.</font></p>
-          <p><b><ins>Fundos</ins> - </b><font size="2">Imobiliários BM&F Bovespa.</font></p>
-          <p><b><ins>Taxas e Indicadores</ins> - </b><font size="2">Inflação, Juros, Poupança e Balança Comercial (Brasil).</font></p>
-        </ul>
-        <ul>
-        <sub><a href="#">¹ Acessar Lista de Índices</a></sub></br>
-        <sub><a href="contribuidores.html#headingTwo">² Acessar Lista de Contribuidores Câmbio</a></sub></br>
-        <sub><a href="contribuidores.html">³ Acessar Lista de Contribuidores R.Fixa</a></sub></br>
-        </ul>
+          <div class=col-6>
+            <p><h4 class="text-primary">Cotações</h4></p>
+            <ul>
+              <p><b><h6>Ações - </b><font size="3">Bovespa, Nyse, Nasdaq, Bolsa de Madri.</font></h6></p>
+              <p><b><h6>Câmbio  - </b><font size="3">Taxas Broadcast, Bitcoin, BM&F, CME, ICE US e Contribuidores Broadcast.</font></h6></p>
+              <p><b><h6>Commodities  - </b><font size="3">Taxas Broadcast, CEPEA, BM&F, CBOT, CME, COMEX, ICE Europe, ICE US, LME e Contribuidores Broadcast.</font></h6></p>
+              <p><b><h6>Fundos  - </b><font size="3">Fundos ANBIMA e Fundos Bovespa.</font></h6></p>
+              <p><b><h6>Índices  - </b><font size="3">Índices Mundiais, B3, CME, Dow Jones, Euronext, FTSE, ICE US, NASDAQ e NYSE GIFS.</font></h6></p>
+              <p><b><h6>Renda Fixa  - </b><font size="3">ANBIMA, Banco Central do Brasil, B3, CBOT, CME, Tullett Prebon e Contribuidores Broadcast.</font></h6></p>
+              <p><b><h6>Taxas e Indicadores  - </b><font size="3">Taxas Broadcast, JP Morgan e Contribuidores Broadcast.</font></h6></p>
+            </ul>
+           <!--
+             <ul>
+            <sub><a href="#">¹ Acessar Lista de Índices</a></sub></br>
+            <sub><a href="contribuidores.html#headingTwo">² Acessar Lista de Contribuidores Câmbio</a></sub></br>
+            <sub><a href="contribuidores.html">³ Acessar Lista de Contribuidores R.Fixa</a></sub></br>
+            </ul>
+            -->
+          </div>
+        <!--Fim Cotações-->
+        <!--Funcionalidades-->
+          <div class=col-6>
+            <p><h4 class="text-primary">Funcionalidades</h4></p>
+            <ul>
+                <p><b><h6>Principais Ferramentas  - </b><font size="3">Janela e painel de cotações, livro de ofertas, ferramenta gráfica, times & trades, players, ativoteca e busca de notícias.</font></h6></p>
+                <p><b><h6>Alertas   - </b><font size="3">Cotações e Notícias.</font></h6></p>
+                <!--p><b><h6>Demo Análise Fundamentalista  - </b></h6></p-->
+                <p><b><h6>Broadcast Chat - </b><font size="3">Com acesso ao Chat Movél, disponível para Android e iOS.</font></h6></p>
+                <p><b><h6>BLINK</b></h6></p>
+                <p><b><h6>Calculadora de Títulos Públicos</b></h6></p>
+                <p><b><h6>Dados Macroeconômicos</b></h6></p>
+                <!--p><b><h6>Fundos de Investimentos</b></h6></p-->
+                <p><b><h6>Precificação de opções</b></h6></p>
+              </ul>
+          </div>
         </div>
-
-      <!--Fim Cotações-->
-      <!--Funcionalidades-->
-
-        <div class=col-6>
-      <p><h4 class="text-primary">Funcionalidades</h4></p>
-        <ul>
-        <p><b><ins>Prinpais Ferramentas</ins> - </b><font size="2">Janela e painel de cotações, livro de ofertas, times & trades, players, ativoteca e busca de notícias.</font></p>
-        <p><b><ins>Análise Técnica</ins> - </b><font size="2">Estudos, Traçados e acesso à Base de Dados com histórico de ativos.</font></p>
-        <p><b><ins>AE Chat</ins> - </b><font size="2">Mensageria instantênea.</font></p>
-        <p><b><ins>Link com Excel</ins> - </b><font size="2">Tempo real e Histórico.</font></p>
-        <p><b><ins>Alertas</ins> - </b><font size="2">Cotações e Notícias.</font></p>
-        <p><b><ins>Precificação de opções</ins></b></p>
-        <p><b><ins>Calculadora de Títulos Públicos</ins></b></p>
-        <p><b><ins>Dados Macroeconômicos</ins></b></p>
-         </ul>
-       </div>
-     </div>
       </div>
       <!--Fim Funcionalidades-->
       <!--Pacotes-->
-      <h4>Pacotes:</h4>
+      <p><h4>Pacotes:</h4></p>
       <!--Pacotes-->
       <div class="accordion md-accordion" id="accordionPacotes" role="tablist" aria-multiselectable="true">
 
@@ -83,7 +84,11 @@
                         </li>
                     </ul>
                     <div class="tab-content" id="pills-tabContent">
-                      <div class="tab-pane fade show active" id="pills-desc-trade" role="tabpanel" aria-labelledby="pills-desc-trade-tab">...</div>
+                      <div class="tab-pane fade show active" id="pills-desc-trade" role="tabpanel" aria-labelledby="pills-desc-trade-tab">
+                        <p>O Pacote <b>Broadcast Trade</b> oferece acesso ao caderno de notícias Conjuntura & Negócios que é composto por uma seleção de notícias sobre negócios e empresas, principalmente de companhias de capital aberto publicadas nos noticiários online da Agência Estado e no jornal "O Estado de S. Paulo".</p>
+                        <p>Além disso, o Pacote Broadcast Trade, disponibiliza cotações com delay das principais Bolsas de Valores do Brasil e EUA e Europa.</p>
+                        <p><a href="#">Clique aqui</a> para acessar o descritivo completo do pacote.</p>
+                      </div>
                       <div class="tab-pane fade" id="pills-pganhos-trade" role="tabpanel" aria-labelledby="pills-pganhos-trade-tab">
                           <strong>Notícias</strong>
                           <ul>
