--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -205,6 +205,9 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="container-fluid" style="margin-left: 50px;">
                 <div class="row">
                     <ul>
                         <li>
@@ -219,9 +222,7 @@
                         <li>
                             <h6>Quais os tipos de contribuição e como ser contribuidor das plataformas Broadcast?</h6>
                         </li>
-                        
                     </ul>
-                    
                 </div>
                 
                 <!--div class="row">
